blackroad-sf/force-app/main/default/objects/AgentModel__c/AgentModel__c.object-meta.xml
<CustomObject>
    <label>Agent Model</label>
    <pluralLabel>Agent Models</pluralLabel>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Ollama model registry — tracks all models on Mac, Octavia Pi, Lucidia Pi. Zero cost inference fleet.</description>
</CustomObject>