blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>mac_local</fullName>
                <default>true</default>
                <label>mac_local</label>
            </value>
            <value>
                <fullName>octavia_pi</fullName>
            </value>
            <value>
                <fullName>lucidia_pi</fullName>
            </value>
            <value>
                <fullName>cecilia_pi</fullName>
            </value>
            <value>
                <fullName>cloudflare</fullName>
            </value>
            <value>
                <fullName>railway</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>