blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/HostIP__c.field-meta.xml
<CustomField>
    <fullName>HostIP__c</fullName>
    <label>Host IP</label>
    <type>Text</type>
        <length>50</length>
    
</CustomField>