blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/LastUsed__c.field-meta.xml
<CustomField>
    <fullName>LastUsed__c</fullName>
    <label>Last Used</label>
    <type>DateTime</type>
    
</CustomField>