blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/ModelId__c.field-meta.xml
<CustomField>
    <fullName>ModelId__c</fullName>
    <label>Model ID</label>
    <type>Text</type>
        <length>100</length>
    <required>true</required>
    
</CustomField>