blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/OllamaEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OllamaEndpoint__c</fullName>
    <label>Ollama Endpoint</label>
    <type>Url</type>
    
</CustomField>