blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/ParameterSize__c.field-meta.xml
<CustomField>
    <fullName>ParameterSize__c</fullName>
    <label>Parameter Size</label>
    <type>Text</type>
        <length>20</length>
    
</CustomField>