blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/SizeGB__c.field-meta.xml
<CustomField>
    <fullName>SizeGB__c</fullName>
    <label>Size (GB)</label>
    <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    
</CustomField>