blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>loaded</fullName>
                <default>true</default>
                <label>loaded</label>
            </value>
            <value>
                <fullName>available</fullName>
            </value>
            <value>
                <fullName>downloading</fullName>
            </value>
            <value>
                <fullName>removed</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>