blackroad-sf/force-app/main/default/objects/AgentModel__c/fields/UseCount__c.field-meta.xml
<CustomField>
    <fullName>UseCount__c</fullName>
    <label>Use Count</label>
    <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    
</CustomField>